--- a/drafts/2016-08-17-dbrks.md
+++ b/drafts/2016-08-17-dbrks.md
@@ -33,9 +33,9 @@ In between when you enter that short URL into your browser and being taken (hope
 
 
 However, it recently occured to me that many of the problems with URL shortening can be eliminated if the shortening service actually belongs to you.
-It had never occured to me that I could run my own URL shortener until a few days ago when I received an email from a friend in which he included several shortened URLs hosted by his own server. 
-That's when it occured to me that 1) my friend knows where each of these links goes because he made them, 2) he can control whether or not the short URL expires, and 3) he knows whether or not he is selling data about his friends to advertising companies. 
-It also occured to me that I actually already understood how URL shortening services worked - or at least I knew how I could make one very easily. 
+I had never considered that I could run my own URL shortener until a few days ago when I received an email from a friend in which he included several shortened URLs hosted by his own server. 
+That's when it occured to me that (1) my friend knows where each of these links goes because he made them, (2) he can control whether or not the short URL expires, and (3) he knows whether or not he is selling data about his friends to advertising companies. 
+I also realized that I actually already understood how URL shortening services worked - or at least I knew how I could make one very easily. 
 And that's when I decided I wanted my own URL shortening service.
 
 
@@ -48,14 +48,19 @@ My strategy was very straight forward:
 
 ### Setting up the short base URL
 I already own several URLs, so purchasing another one was not a big deal. 
-I also had access to a public facing web server that is run my the university I attend. 
-The university's webserver allows people to run websites out of their user's home directory by putting files inside of a ``public_html`` directory.
+If you have never done it before, it is very easy to buy your own domain name. 
+I bought mine from GoDaddy - a decision I frequently regret (for reasons I won't discuss in this post), but have not yet found the energy to switch over to a different provider.
+If all you want to do is make a URL shortening service, GoDaddy will work out fine.
+
+I have access to a public facing web server that is run by the university I attend. 
+I realize this is a luxary most people don't have access to - in which case you should check out dreamhost.
+At any rate, the university's webserver allows people to run websites out of their user's home directory by putting files inside of a ``public_html`` directory.
 In fact, I was already running a website from this location, so my URL shortening service would have to live as a subdirectory of this existing site.
-Unfortunately, this means that my brand new short URL, <http://dbrks.co>, would need to be pointed at a rather long URL to begin with <http://www.cs.uml.edu/~dbrooks/links>.
-Also, that is not really how DNS works.
-But, it turns out that for the first time ever my DNS registrar (GoDaddy) actually provided me with a useful feature - "URL forwarding".
-Ironically, they implement this service by repling to requests to your domain with a 302 redirect reply (the same technique I planned to usefor my URL shortening).
-So, now I could type in <dbrks.co> into my browser and it would land me in the location I would be hosting my URL shortener at <http://www.cs.uml.edu/~dbrooks/links>.
+Unfortunately, this meant that my brand new short URL, [dbrks.co](http://dbrks.co), would need to be pointed at a rather long URL (<http://www.cs.uml.edu/~dbrooks/links>).
+This is not really how DNS works. At all.
+As it turns out, for the first time ever my DNS registrar (GoDaddy) actually provided me with a useful feature - "URL forwarding".
+Ironically, they implement this by pointing your domain name at one of their servers, and repling to requests to your domain with a 302 redirect reply (the same technique I planned to use for my URL shortening).
+So, now I could type in [dbrks.co](http://dbrks.co) into my browser and it would land me in the location I would be hosting my URL shortener at <http://www.cs.uml.edu/~dbrooks/links>.
 The next step was to make that magical location redirect to arbitrary other websites.
 
 ### htaccess redirecting
