--- a/drafts/2016-08-17-dbrks.md
+++ b/drafts/2016-08-17-dbrks.md
@@ -47,7 +47,7 @@ My strategy was very straight forward:
  4. Profit
 
 ### Setting up the short base URL
-I already own several URLs, so purchasing another one was not a big deal. 
+I already own several URLs, so purchasing another was not a big deal. 
 If you have never done it before, it is very easy to buy your own domain name. 
 I bought mine from GoDaddy - a decision I frequently regret (for reasons I won't discuss in this post), but have not yet found the energy to switch over to a different provider.
 If all you want to do is make a URL shortening service, GoDaddy will work out fine.
@@ -63,7 +63,7 @@ Ironically, they implement this by pointing your domain name at one of their ser
 So, now I could type in [dbrks.co](http://dbrks.co) into my browser and it would land me in the location I would be hosting my URL shortener at <http://www.cs.uml.edu/~dbrooks/links>.
 The next step was to make that magical location redirect to arbitrary other websites.
 
-### htaccess redirecting
+### .htaccess Redirecting
 
 I wrote a basic htaccess file with the contents below
 
@@ -75,23 +75,29 @@ RewriteRule ^test1$ http://www.google.com [r=302,NE,L]
 RewriteRule ^test2$ http://www.yahoo.com [r=302,NE,L]
 ```
 
-This file would redirect the url <http://www.cs.uml.edu/~dbrooks/links/test1> , as well as <http://dbrks.co/test1>, to google and <http://dbrks.co/test2> to yahoo.
+This file would redirect the url <http://www.cs.uml.edu/~dbrooks/links/test1> , as well as [dbrks.co/test1](http://dbrks.co/test1), to google and [dbrks.co/test2](http://dbrks.co/test2) to yahoo.
 Additionally, it provides a tiny bit of "security" by blocking people access to viewing the actual htaccess file. The ``NE`` tells the server not to escape special characters (basically allowing you to type in the URL's to redirect to verbatim).
 This worked perfectly just as I had planned and I was ready to begin the final phase of my plans - profit.
 
-Basically, my original idea had been to simply ssh into the server and edit the .htaccess file whenever I wanted to shorten a URL.
+Wrong.
+
+My original idea had been to simply ssh into the server and edit the .htaccess file whenever I wanted to shorten a URL.
 It was a sweet and simple implementation, with the only downsides being I would need to be able to SSH into the server to add URLs, and I would have to type in some extra syntax for each URL.
 I did not plan on shortening URLs on a regular basis, so this seemed like a reasonable tradeoff.
-I was correct about everything except the part about not shortening URLs on a regular basis, and that quickly became the problem.
+I was correct about everything except the part about not shortening URLs on a regular basis, and that quickly turned the whole "I'll just ssh in and edit the .htaccess file" into a problem.
 
-### User Interface
-As it turns out, I quickly fell into the habbit of wanting to add new URLs all the time and it did not take much longer for me to realize the real power of a URL shortening service comes from having an easy to use web interface. 
-This was a problem, because the schools web server does not allow me to respond to HTTP requests using PHP, Ruby, Perl, or Python.
-What I was allowed to do was run scripts and cron jobs. 
+### A user interface
+As it turns out, I quickly fell into the habbit of wanting to add new URLs all the time - it was just too convenient.
+Suddenly, I could handwrite URLs into my paper notebooks.
+I could skip the step of having to type in my zip code at [weather.gov](http://www.weather.gov), and I will never again have to do a google search for the port number of the CUPS server (Yes, I linked it to [dbrks.co/cups](http://localhost:631).
 
-Around the same time I was working on a project and looking at some code on github when I noticed a small icon I had not seen before - an edit button.
+So it did not take very long for me to realize that the real power of a URL shortening service comes from having an easy to use web interface that can be quickly edited and easily managed. 
+This was a problem, because the school's web server did not allow me to respond to HTTP requests using PHP, Ruby, Perl, or Python, effectively preventing me from pushing information to the server via a web browser.
+What I was allowed to do on the server was run scripts and cron jobs. 
+
+Around the same time I was working on a project, I was looking at some code on github when I noticed a small icon I had not seen before - an edit button.
 It turns out that github allows you to make edits to files directly from their website and commit the changes to your repository.
-This gave me an idea - I could store my links on github, and use the servers cron job to check for and download updates to the htaccess file.
+That gave me an idea - I could store my links on github and use the server's cron job to check for and download updates to the htaccess file.
 To further improve the link management process, I created a simple configuration file that stores short names and the corresponding long urls that is easy to edit. 
 I then wrote a short python script that 
 
@@ -102,162 +108,28 @@ I then wrote a short python script that
  5. creates an index file for convenience
 
 I then set this script to run every few minutes on the server.
-The results: URL management and editing security managed by github at <http://dbrks.co/edit>
+Finally, I used my new favorite toy (my URL shortener) to create a convenient way of editing this configuration file - I simply linked the configuration file's "edit" page on github to [dbrks.co/edit](http://dbrks.co/edit).
+Now when I want to change a URL, I simply type in [dbrks.co/edit](http://dbrks.co/edit), sign into github (if I'm not already), type in my changes, and click save.
+A few minutes later, the server will run the cron job, update the htaccess file, and my link will be active.
 
+### Future work
+Of course, this system is not perfect.
+There is a short lag time between editing the configuration page and the link becoming active.
+The reason for this is a combination of two issues.
+The first is that github's static content site <http://raw.githubusercontent.com> that my script uses to check for updates can take a few minutes to update.
+Second, my cron job can only fire at most once a minute.
+Experimentally, I've found there to be a diminishing return somewhere below the five minute mark.
+Thus, it can take up to five minutes for my URL to become active.
+I have an idea for improving this, but I won't be able to run it off the school webserver.
+Github has a system called webhooks where the server will make an HTTP request to an address you point it at every time you commit a change to your code.
+If I could run a PHP or Python script from Apache, I could have it intercept these HTTP messages from github and immediately update the htaccess file.
 
-You can see the code and try it out at the same time at <http://dbrks.co/example>
+Another problem is organization - right now all the links are in a single configuration file.
+At the moment, I have a sufficiently small number of links that it is still manageable.
+It helps that I can put comments in the file, and also that I can namespace URLs.
+For example, all my webcam links start with ``dbrks.co/cam/...``.
+However, it is not difficult to imagine that in the future as the number of links grows this will become problemmatic. 
+One possible solution would be to support multiple configuration files and divide the links across them (possibly by namespace).
+But this would make editing much less convenient.
 
-----------------------------------------
-
-To use this template:
-=====================
-
- - Make a copy
- - Change the file name
- - Update the header info
- - change published to `true'
- - Delete these quick notes!
-
-Add a tag!
-----------
-
-Its fast and easy!
-
-Just go to `~/Source/notes/tags/` and add a file.md with the following content
-
-```
----
-layout: blog_by_tag
-title: <tagnamegoeshere> posts
-tag: <tagnamegoeshere>
-permalink: <tagnamegoeshere>/
----
-```
-
-Don't forget to add the tag file when you commit!
-
-Formatting
-----------
- *  _Italic_
- *  **bold**
- *  `FixedSpace`
- *  Abbreviations <abbr title="HYPER TEXT MARKUP">HTML</abbr>
- *  <del>Deleted</del> and <ins>Inserted</ins>
- *  Super<sup>script</sup> and Sub<sub>script</sub>
-
-Links
------
- *  [External Links](www.google.com)
- *  [Post Links]({% post_url 2014-09-04-udev-usb-mounting %})
- *  [Static internal Links](/about/) would go to weaselpipe.com/about/.
- *  [Reference Style Links][google] 
-
-[google]: http://www.google.com/ "This is google"
-
-Quoting Text
-------------
-
-> Curabitur blandit tempus porttitor. 
-> Nullam quis risus eget urna mollis ornare vel eu leo. 
-> > Nullam id dolor id nibh ultricies vehicula ut id elit.
-
-Example Text
-------------
-
-Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. *Aenean eu leo quam.* Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.
-
-> Curabitur blandit tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
-
-Etiam porta **sem malesuada magna** mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
-
-{% highlight js %}
-// Example can be run directly in your JavaScript console
-
-// Create a function that takes two arguments and returns the sum of those arguments
-var adder = new Function("a", "b", "return a + b");
-
-// Call the function
-adder(2, 6);
-// > 8
-{% endhighlight %}
-
-### Lists
-
-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-
-* Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-* Donec id elit non mi porta gravida at eget metus.
-* Nulla vitae elit libero, a pharetra augue.
-
-Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.
-
-1. Vestibulum id ligula porta felis euismod semper.
-2. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-3. Maecenas sed diam eget risus varius blandit sit amet non magna.
-
-Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.
-
-<dl>
-  <dt>HyperText Markup Language (HTML)</dt>
-  <dd>The language used to describe and define the content of a Web page</dd>
-
-  <dt>Cascading Style Sheets (CSS)</dt>
-  <dd>Used to describe the appearance of Web content</dd>
-
-  <dt>JavaScript (JS)</dt>
-  <dd>The programming language used to build advanced Web sites and applications</dd>
-</dl>
-
-Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nullam quis risus eget urna mollis ornare vel eu leo.
-
-### Images
-
-Quisque consequat sapien eget quam rhoncus, sit amet laoreet diam tempus. Aliquam aliquam metus erat, a pulvinar turpis suscipit at.
-
-![placeholder](http://placehold.it/800x400 "Large example image")
-![placeholder](http://placehold.it/400x200 "Medium example image")
-![placeholder](http://placehold.it/200x200 "Small example image")
-
-### Tables
-
-Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Upvotes</th>
-      <th>Downvotes</th>
-    </tr>
-  </thead>
-  <tfoot>
-    <tr>
-      <td>Totals</td>
-      <td>21</td>
-      <td>23</td>
-    </tr>
-  </tfoot>
-  <tbody>
-    <tr>
-      <td>Alice</td>
-      <td>10</td>
-      <td>11</td>
-    </tr>
-    <tr>
-      <td>Bob</td>
-      <td>4</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>Charlie</td>
-      <td>7</td>
-      <td>9</td>
-    </tr>
-  </tbody>
-</table>
-
-Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis. Nullam quis risus eget urna mollis ornare vel eu leo.
-
------
-
-Want to see something else added? <a href="https://github.com/poole/poole/issues/new">Open an issue.</a>
+For the moment though, this setup has been working quite well for me. You can see the code and try it out at the same time at <http://dbrks.co/example>
