--- a/drafts/0000-00-00-template.md
+++ b/drafts/0000-00-00-template.md
@@ -3,7 +3,7 @@ layout: post
 title: Title of the post
 tags: linux osx python udev vim xfce programming systems security random
 category: (notes|projects)
-icon: beer #weaselpipe.com/icons
+icon: beer # file-text, tools, code, home, lock, device-desktop - more @ weaselpipe.com/icons
 year: 2014
 month: mm
 day: dd
